feat(drive): use protocol-only turn completion in 2.3.2-dev5